--- a/BAAR/BAAR.Android/Resources/layout/Main.axml
+++ b/BAAR/BAAR.Android/Resources/layout/Main.axml
@@ -5,7 +5,8 @@
     android:layout_height="fill_parent"
     android:minWidth="25px"
     android:minHeight="25px"
-    android:paddingTop="40dp">
+    android:paddingTop="40dp"
+    android:alpha="1">
     <TextView
         android:text="BAARS"
         android:gravity="center"
@@ -18,10 +19,10 @@
         android:layout_marginBottom="300dp" />
     <ImageButton
         android:src="@drawable/pbutton"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
         android:id="@+id/scanButton"
         android:clickable="true"
-        android:layout_gravity="center|bottom"
-        android:layout_marginBottom="20dp" />
+        android:layout_gravity="center"
+        android:layout_marginTop="-500px" />
 </LinearLayout>
