--- a/BAAR/BAAR.Android/Resources/layout/student.axml
+++ b/BAAR/BAAR.Android/Resources/layout/student.axml
@@ -22,4 +22,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/editText1" />
+    <Button
+        android:text="Send Email"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/EmailButton" />
 </LinearLayout>
