--- a/BAAR/BAAR.Android/Resources/layout/student.axml
+++ b/BAAR/BAAR.Android/Resources/layout/student.axml
@@ -35,6 +35,12 @@
         android:layout_height="wrap_content"
         android:id="@+id/Location_Spinner"
         android:layout_marginTop="20px" />
+    <RelativeLayout
+        android:minWidth="25px"
+        android:minHeight="25px"
+        android:layout_width="match_parent"
+        android:layout_height="118.5dp"
+        android:id="@+id/StudentTable" />
     <Button
         android:text="Submit"
         android:layout_width="match_parent"
