--- a/BAAR/BAAR.Android/Resources/layout/Main.axml
+++ b/BAAR/BAAR.Android/Resources/layout/Main.axml
@@ -8,15 +8,16 @@
     android:paddingTop="40dp"
     android:alpha="1">
     <TextView
-        android:text="BAARS"
+        android:text="Start Scan"
         android:gravity="center"
-        android:textSize="80dp"
+        android:textSize="60dp"
         android:textAlignment="gravity"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/textView2"
-        android:layout_marginBottom="300dp" />
+        android:layout_marginBottom="300dp"
+        android:textStyle="bold" />
     <ImageButton
         android:src="@drawable/pbutton"
         android:layout_width="200dp"
@@ -24,5 +25,7 @@
         android:id="@+id/scanButton"
         android:clickable="true"
         android:layout_gravity="center"
-        android:layout_marginTop="-500px" />
+        android:layout_marginTop="-500px"
+        android:backgroundTint="#ff0000ff"
+        android:backgroundTintMode="src_over" />
 </LinearLayout>
