--- a/BAAR/BAAR.Android/Resources/layout/Main.axml
+++ b/BAAR/BAAR.Android/Resources/layout/Main.axml
@@ -27,5 +27,6 @@
         android:layout_gravity="center"
         android:layout_marginTop="-500px"
         android:backgroundTint="#ff0000ff"
-        android:backgroundTintMode="src_over" />
+        android:backgroundTintMode="src_over"
+        android:contextClickable="true" />
 </LinearLayout>
