--- a/BAAR/BAAR.Android/Resources/layout/Main.axml
+++ b/BAAR/BAAR.Android/Resources/layout/Main.axml
@@ -6,7 +6,8 @@
     android:minWidth="25px"
     android:minHeight="25px"
     android:paddingTop="40dp"
-    android:alpha="1">
+    android:alpha="1"
+    android:id="@+id/main">
     <TextView
         android:text="Start Scan"
         android:gravity="center"
@@ -26,7 +27,7 @@
         android:clickable="true"
         android:layout_gravity="center"
         android:layout_marginTop="-500px"
-        android:backgroundTint="#ff0000ff"
+        android:backgroundTint="#00ffffff"
         android:backgroundTintMode="src_over"
         android:contextClickable="true" />
 </LinearLayout>
